syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.bo.group";
option java_multiple_files = true;
option swift_prefix = "";

message GroupJoinQuestionsAnswerResult {
    int32 score = 1;
    repeated int64 questions_ids = 2;
    bool joined = 3;
}
